# chw

./: .gitignore  git_command  mac_shortcut_key  process  substrate_command  time.txt
bifrost_note/: 0_bifrost_add_pallet.rs  1_assets_mode.rs  Cargo.toml  note.rs
bifrost_note/compile_info/: Cargo.toml
bifrost_note/docker/: 0_docker_concepte.rs
bifrost_note/git/: 0_git.rs
bifrost_note/issue/: Cargo.toml
bifrost_note/macros/: Cargo.toml
bifrost_note/src/: 0_DeFi_config.rs  10_apps_substrate.rs  11_solve_scheduler_setcode_upgrade.rs  12_compare_source.rs  13_toolchain_start.rs  14_test.rs  15_add_weighInfo.rs  16_benchmark.rs  17_YouTube_benchmark.rs  18_benchmarking_edit.rs  19_pallet_invoke.rs  1_pattern_destruct.rs  20_genesis_config.rs  21_eth_sub.rs  22_on_finalize.rs  2_trait_bound.rs  3_Bifrost_Whitepaper.rs  4_mac_shortcut.rs  5_Bifrost_online_upgrade.rs  6_remote_compile.rs  7_apps_run.rs  8_docker_run.rs  9_ssh_poe.rs  can_delete_note.rs  main.rs
bifrost_note/turbofish/: Cargo.toml
bifrost_note/word/: 0_staking.rs
book/: Cargo.toml
book/dive_into_rust/: 0_intro.rs  10_memory.rs  11_ownership_move.rs  12_borrow_lifetime.rs  13_borrow_check.rs  26_std.rs  (+31 more)
doc/: Bifrost Staking 多结点测试.md  Bifrost 多结点升级(此例以两个结点为例).md
online_rust/: note.rs
recite/: Cargo.toml
std_module/: Cargo.toml  template.rs
substrate_polkadot/: questions
web/rust_web/: 0_actix_intro.rs  Cargo.toml
web/rust_web/src/: .env  config.rs  database.sql  db.rs  handler.rs  main.rs  model.rs
windows_linux/: substrate_polkadot_env.rs  ubuntu_centos_windows.rs  window_llvm.rs
(+728 files in other folders)
