[package]
name = "rust_web"
version = "0.1.0"
authors = ["chw683 <326756656@qq.com>"]
edition = "2018"

[dependencies]
config = "0.10.1"   # 可用于加载环境配置
dotenv = "0.15.0"
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"
